--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h1
 
 body {
     font-family:courier, serif;
-    background-image: url("../img/wallpaper.jpg");
+    background-image: url("../img/wallpaper.png");
 }
 
 #piss {
