centre menu along top

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,14 @@ marquee {
     color: yellow;
 }
 
+#top {
+    align-items: center;
+}
+
+.bits {
+    display: inline;
+}
+
 /* Example ID Style */
 #idName {
     /* Code here */
