--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,24 @@ marquee {
     color: yellow;
 }
 
-.topMenu {
-    align-items: center;
+#navbar ul { /* #navbar ul themes any <ul> attached to the navbar ID */
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: grey;
 }
 
-.bits {
-    display: inline;
+#navbar li {
+    float: left;
+}
+
+#navbar li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 /* Example ID Style */
