--- a/css/style.css
+++ b/css/style.css
@@ -18,24 +18,24 @@ marquee {
     color: yellow;
 }
 
-#navbar ul { /* #navbar ul themes any <ul> attached to the navbar ID */
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: grey;
+#navbar ul { /* Themes navbar itself */
+    list-style-type: none; /* Disables bullet points at the start of ul */
+    margin: 0; /* Disables browser default margins */
+    padding: 0; /* Disables browser default padding */
+    overflow: hidden; /* Hides cutoff content */
+    background-color: grey; /* Sets background color of the navbar */
 }
 
-#navbar li {
-    float: left;
+#navbar li { /* Themes list items in navbar */
+    float: left; /* Makes items in navbar align to the left */
 }
 
-#navbar li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+#navbar li a { /* Themes text of list items in navbar */
+    display: block; /* Displays the list items side-by-side */
+    color: black; /* Sets font color */
+    text-align: center; /* Aligns text to center of box */
+    padding: 14px 16px; /* Sets padding around text */
+    text-decoration: none; /* Disables inherited text decorations */
 }
 
 /* Example ID Style */
