--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,13 @@ iframe {
     
 }
 
-/* Example ID Style */
+/* Example ID Style 
 #idName {
-    /* Code here */
+    Code here 
 }
+*/
 
-/* Example Class Style */
+/* Example Class Style 
 .className {
     /* Code here */
 }
