--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,10 @@ iframe {
     
 }
 .mapD {
-    text-align: middle;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     border:5px solid black;
 }
 
