--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,10 @@ iframe {
     border: 5px darkslateblue;
     
 }
-.mapD {
+#map {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
     border:5px solid black;
 }
 
