--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-h1 
-{
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap'); /* Imports a web-friendly variant of the Courier font */
+
+h1 {
     text-align: center;
 }
 
 body {
-    font-family:courier, serif;
+    font-family: "Courier Prime", serif;
     background-image: url("../img/wallpaper.png");
     background-size: cover;
 }
@@ -21,6 +22,13 @@ marquee {
 
 #piss {
     color: yellow;
+}
+
+#character {
+    border: 3px solid goldenrod;
+    width: 48.5vw;
+    height: auto;
+    margin: auto;
 }
 
 #navbar ul { /* Themes navbar itself */
@@ -51,18 +59,6 @@ marquee {
 
 .active {
     background-color: rgb(0, 0, 82);
-}
-
-iframe {
-    border: 5px darkslateblue;
-}
-
-#character {
-    border: 3px solid goldenrod;
-    width: 48.5vw;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 /* Example ID Style 
