--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap'); /* Imports a web-friendly variant of the Courier font */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap'); /* Imports a web-friendly serif font */
+
+body { /* Themes almost everything on page */
+    font-family: "Noto Serif", serif; /* Sets font family to Noto Serif, otherwise fallback to system serif font */
+    background-image: url("../img/wallpaper.png");
+    background-size: cover; /* Fits the background image over the page while keeping original aspect ratio */
+}
 
 h1 {
     text-align: center;
-}
-
-body {
-    font-family: "Noto Serif", serif;
-    background-image: url("../img/wallpaper.png");
-    background-size: cover;
 }
 
 p {
@@ -26,9 +26,9 @@ marquee {
 
 #character {
     border: 3px solid goldenrod;
-    width: 48.5vw;
-    height: auto;
-    margin: auto;
+    width: 48.5vw; /* Sets the image width to just under half of the screen width, allowing 2 images to fit next to each other perfectly */
+    height: auto; /* Automatically adjusts image height based on the width to keep original aspect ratio */
+    margin: auto; /* Centers the images */
 }
 
 #navbar ul { /* Themes navbar itself */
@@ -53,22 +53,10 @@ marquee {
     font-size: 110%;
 }
 
-#navbar li a:hover {
-    background-color: #111;
+#navbar li a:hover { /* Themes item being hovered over on the navbar */
+    background-color: #1b1b1b; /* Sets background color to a darker shade to give a feeling of responsiveness */
 }
 
-.active {
-    background-color: rgb(0, 0, 82);
+.active { /* Themes navbar item that correlates with the active page */
+    background-color: #000050; /* Sets background color to make it easy for users to tell which page they're currently on */
 }
-
-/* Example ID Style 
-#idName {
-    Code here 
-}
-*/
-
-/* Example Class Style
-.className {
-    Code here
-}
-*/
