--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ marquee {
     width: 48vw; /* Sets the image width to just under half of the screen width, allowing 2 images to fit next to each other perfectly */
     height: auto; /* Automatically adjusts image height based on the width to keep original aspect ratio */
     margin: auto; /* Centers the images */
+    margin-bottom: 1vh;
     display: block;
-    padding-bottom: 1vh;
     float: left;
 }
 
