Character page border size fixes

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ marquee {
 }
 
 #character {
-    border: 3px solid goldenrod;
+    border: 0.2% solid goldenrod;
     width: 48.75%; /* Sets the image width to just under half of the screen width, allowing 2 images to fit next to each other perfectly */
     height: auto; /* Automatically adjusts image height based on the width to keep original aspect ratio */
     margin: auto; /* Centers the images */
